objects/echosign_dev1__SIGN_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Current_Signing_URL__c</fullName>
        <description>For use in the 2c9 Portal to access the esign signing iframe</description>
        <label>Current Signing URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee</label>
        <referenceTo>tc9_p__Payee__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement</label>
        <referenceTo>ts2__Placement__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>